--- a/src/app/admin/header/header.component.html
+++ b/src/app/admin/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="main-header">
   <!-- Logo -->
   <a class="logo">
-    <span class="logo-lg"><b>FirstRock</b> Capital</span>
+    <span class="logo-lg"><b>VulcanFR</b></span>
   </a>
   <!-- Header Navbar: style can be found in header.less -->
   <nav class="navbar navbar-static-top">
