--- a/src/app/admin/left-side/left-side.component.html
+++ b/src/app/admin/left-side/left-side.component.html
@@ -33,7 +33,8 @@
             </span>
           </a>
         <ul class="treeview-menu">
-          <li class="active"><a routerLink="dashboard1"><i class="fa fa-circle-o"></i> Dashboard Converter Data</a></li>
+          <li class="active"><a routerLink="dashboard1"><i class="fa fa-th"></i> Dashboard Converter Data</a></li>
+          <li><a href="https://firstrockvc.github.io/VulcanFR/WorkingPaper.pdf" target="_black"><i class="fa fa-file"></i>Documentation</a></li>
         </ul>
       </li>
     </ul>
