--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="content-wrapper">
+  <ng4-loading-spinner> </ng4-loading-spinner>
   <!-- Content Header (Page header) -->
   <!-- Main content -->
   <section class="content">
