--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
+  <app-spinner> </app-spinner>
 
   <app-admin-header></app-admin-header>
   <!-- Left side column. contains the logo and sidebar -->
